Update-java-unos-teksta.html

--- a/java-unos-teksta.html
+++ b/java-unos-teksta.html
@@ -13,7 +13,7 @@ function myFunction() {
     var person = prompt("Unesite ime", "Ime Prezime");
     if (person != null) {
         document.getElementById("demo").innerHTML =
-        "Bok " + person + "! Kako si danas?";
+        "Zdravo " + person + ". Kako ste danas?";
     }
 }
 </script>
